# meeting-assistant

./: main.py  pyproject.toml
backend/: config.py  main.py  observability.py  pytest.ini  requirements.txt
backend/agents/: analysis.py  facilitation.py  rag.py
backend/models/: schemas.py
backend/services/: assignee_map.py  audio_transcribe.py  database.py  embeddings.py  export.py  facilitation.py  gemini_errors.py  ingest.py  jira.py  meeting_store.py  stats.py  transcript.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_api_sqlite.py  test_audio_transcribe.py  test_database.py  test_embeddings.py  test_facilitation.py  test_future_features.py  test_gemini_errors.py  test_ingest.py  test_jira.py  test_live_api.py  test_live_integration.py  test_meeting_store.py  test_observability.py  test_rag.py  test_schemas.py  test_search_export.py  test_transcript.py  test_vector_store.py
cursor/rules/: docs-on-change.mdc
data/synthetic/: meeting-01-scrum.txt  meeting-02-planning.txt  meeting-03-review.txt  meeting-04-client-kickoff.txt
data/vectors/: 44305b0c751b.json  (+1 more)
docs/: 01-project-overview.html  02-implementation.html  03-roadmap-and-future-work.html  CHANGELOG.md  README.md  package-lock.json  package.json
frontend/: _build_se_nb.py  _run_afm_nb.py  _run_ec_nb.py  _run_nb.py  astro.config.mjs  package-lock.json  package.json
scripts/: capture-ui-screenshots.mjs  capture-ui-screenshots.sh  export-docs.sh  html-to-pdf.mjs  render-doc-diagrams.mjs  run-all-tests.sh  run-backend.sh  run-dev.sh  run-frontend.sh  run-live-tests.sh  run-tests.sh
(+46 files in other folders)
