[project]
name = "meeting-assistant"
version = "0.2.0"
description = "Persian meeting assistant — FastAPI, Pydantic AI, ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.36.0",
    "pydantic-ai-slim[google,logfire]>=1.107.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
